# cookiecutter_template_quick_analysis

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: {{cookiecutter.project_slug}}_quick_analysis.ipynb
{{cookiecutter.project_slug}}/src/: utils.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
