[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" }
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
pandas = "*"
numpy = "*"
jupyter = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"