[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "pandas",
    "numpy",
    "jupyter",
    "matplotlib",
    "seaborn",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]